# ada-portfolio2

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: chess-search.hpp  collinear-search.hpp  main.cpp
test/: test-main.cpp
